--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <!--NAVIGATION SECTION -->  
         <nav>
+            <div class>
            <div class="logo">UMHLANGA FITNESS</div>  
            <div class="menu"> 
                 <ul>
